[build-system]
requires = [
    "setuptools>=63.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "gather-vision-gov-au-plugin"
description = "A gather-vision plugin for obtaining data from Australian governments."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Utilities",
]
dynamic = [
    "version",
    "dependencies",
    "optional-dependencies",
]

[project.urls]
"Homepage" = "https://github.com/anotherbyte-net/gather-vision-gov-au-plugin"
"Changelog" = "https://github.com/anotherbyte-net/gather-vision-gov-au-plugin/blob/main/CHANGELOG.md"
"Source" = "https://github.com/anotherbyte-net/gather-vision-gov-au-plugin"
"Tracker" = "https://github.com/anotherbyte-net/gather-vision-gov-au-plugin/issues"

[project.entry-points."gather_vision.plugin"]
gov_au = "gather_vision_gov_au_plugin.plugin:PluginEntry"

[tool.setuptools.packages.find]
where = [
    "src",
]
include = [
    "gather_vision_gov_au_plugin",
]

[tool.setuptools.dynamic]
version = { file = [
    "VERSION",
] }
dependencies = { file = [
    "requirements.txt",
] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = [
    "requirements-dev.txt",
] }

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --quiet"
pythonpath = [
    "src",
]
testpaths = [
    "tests",
]

[tool.coverage.run]
# "Specifying the source option enables coverage.py to report on unexecuted files,
# since it can search the source tree for files that haven’t been measured at all."
source = [
    'src',
]
omit = [
    '*/site-packages/*',
    'tests/*',
]

[tool.coverage.report]
skip_empty = true

[tool.coverage.html]
directory = "coverage-html"

[tool.isort]
profile = "black"
src_paths = [
    "src",
]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py37,py38,py39,py310,py311

[testenv]
# recreate = true
deps =
    -r requirements.txt
    -r requirements-dev.txt
commands =
    python -X dev -m pytest --doctest-modules --junitxml=pytest-coverage.xml.cover --cov-report=term-missing:skip-covered --cov=src/ tests/
"""


[tool.pydocstyle]
convention = 'google'

[tool.mypy]
ignore_missing_imports = true
